feat(core): Download - get the filename form the content disposition
Fixes #3788